--- a/bptn-project-java/.project
+++ b/bptn-project-java/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>bptn_java_project</name>
+	<name>bptn-project-java</name>
 	<comment></comment>
 	<projects>
 	</projects>
